# hiverunner

./: .env.example  .gitignore  AGENTS.md  CHAOS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASKS.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  server.js  tailwind.config.ts  tsconfig.json
data/: configured-skills.example.json  notifications.example.json
docs/: AUTH.md  AVATAR_SYSTEM.md  COST-TRACKING.md  MODEL-ROUTING.md  OPERATIONS.md  README.md  THEME_SPEC.md  build-memory-investigation-2026-05-25.md  company-agent-card-reference.md  design-system-standard.md  hiverunner-external-runner-contract.md  hiverunner-symphony-runner.md  local-first-boundary.md  model-source-credential-architecture.md  onboarding-rsc-navigation.md  optional-ai-avatar-generation.md  orchestration-engine-decomposition.md  orchestration-openclaw-execution-cancel-contract-2026-04-01.md  orchestration-schema.md  probe-warning-investigation-2026-05-12.md  propose-sprint-plan-engine-comparison-2026-05-16.md  provider-billing-roadmap.md  runtime-dependencies.md  starter-agent-packs.md  two-lane-runtime.md  ui-navigation-lag.md  voice-avatar-backend.md  voice-live-call-contract.md
e2e/: dashboard-request-count.spec.ts  files-workspace-visibility.spec.ts  smoke.spec.ts
pipecat-server/: .env.example  .gitignore  README.md  bot.py  pyproject.toml  server.py  setup.sh  start.sh  voice_prompt.py
public/: manifest.json  sw.js
scripts/: check-external-http-deps.mjs  check-openclaw-project-deps.mjs  collect-usage.ts  (+47 more)
(+908 files in other folders)
