[project]
name = "hiverunner-voice-server"
version = "0.1.0"
description = "Optional Pipecat + Tavus voice avatar backend for HiveRunner"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[tavus,google,deepgram,cartesia,daily,silero]",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
